--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #121214;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+}
