--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,15 @@ body{
     display: flex;
     align-items: center;
 }
+
+.container {
+    background-color: #343439;
+    padding: 30px 40px;
+    min-width: 470px;
+    color: #efefef;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
