--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,9 @@ body{
     flex-direction: column;
     align-items: center;
 }
+
+h2 {
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
