Colocando os inputs no CSS

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,14 @@ h2 {
     margin-bottom: 5px;
     font-size: 18px;
 }
+
+.input input {
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid #7336ff;
+    font-size: 18px;
+    border-radius: 2px;
+    padding: 5px;
+    color: #fff;
+}
+
