--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,16 @@ h2 {
     border-bottom: 3px solid #7336ff;
 }
 
+#generate {
+    background-color: #7336ff;
+    border: none;
+    padding: 12px 20px;
+    border-radius: 4px;
+    width: 100%;
+    margin: 20px 0px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+}
+
