--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,13 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: #121214;
     width: 100%;
     min-height: 100vh;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .container {
